Add more test cases for reuse and play